Fix deployment: Remove automatic database seeding
- Remove release phase from Procfile that was causing build failure
- Update railway.toml configuration
- Add separate database setup script for post-deployment
- Database seeding now manual to avoid build-time connection issues

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
     "seed": "node backend/seed.js",
+    "setup-db": "./setup-database.sh",
     "build": "npm install",
     "build:frontend": "./build-frontend.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
