--- a/admin-dashboard/netlify.toml
+++ b/admin-dashboard/netlify.toml
@@ -1,12 +1,24 @@
-# Netlify Configuration for Admin Dashboard
+# Netlify Configuration for DigiBoard Admin Dashboard
 [build]
+  base = "admin-dashboard"
   command = "npm install"
-  functions = "netlify/functions"
+  publish = "admin-dashboard/public"
+  functions = "admin-dashboard/netlify/functions"
 
 [build.environment]
   NODE_ENV = "production"
+  NETLIFY = "true"
 
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/server"
   status = 200
+
+# Security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
