--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,29 @@
 # Netlify Configuration for DigiBoard Main Panel (Flutter Web)
 [build]
-  command = "cd frontend && flutter build web --release"
+  command = """
+    # Install Flutter in /tmp to avoid conflicts
+    export FLUTTER_HOME=/tmp/flutter
+    export PATH="$FLUTTER_HOME/bin:$PATH"
+    
+    # Clone Flutter if not exists
+    if [ ! -d "$FLUTTER_HOME" ]; then
+      git clone https://github.com/flutter/flutter.git -b stable --depth 1 $FLUTTER_HOME
+    fi
+    
+    # Accept licenses and configure
+    flutter config --no-analytics
+    flutter precache --web
+    
+    # Build the project
+    cd frontend
+    flutter pub get
+    flutter build web --release --web-renderer html
+  """
   publish = "frontend/build/web"
 
 [build.environment]
   FLUTTER_WEB = "true"
+  PUB_CACHE = "/opt/buildhome/.pub-cache"
 
 # Redirect all routes to index.html for Flutter single-page app
 [[redirects]]
