chore: update .gitignore and netlify.toml for offline deployment
- Updated .gitignore files to allow frontend/build/web for Netlify
- Updated netlify.toml to use pre-built Flutter web files
- Includes latest Flutter web build for offline deployment

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -30,8 +30,16 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+# /build/  # Allow build files for deployment
 /coverage/
+
+# Exclude specific build platforms but keep web
+/build/android/
+/build/ios/
+/build/linux/
+/build/macos/
+/build/windows/
+# Keep /build/web/ for Netlify deployment
 
 # Symbolication related
 app.*.symbols
