--- a/.gitignore
+++ b/.gitignore
@@ -73,11 +73,19 @@ jspm_packages/
 # Flutter/Dart
 frontend/.dart_tool/
 frontend/.packages
-frontend/build/
+# frontend/build/  # Allow build files for Netlify deployment
 frontend/.flutter-plugins
 frontend/.flutter-plugins-dependencies
 frontend/.metadata
 frontend/pubspec.lock
+
+# Exclude specific build directories but keep web build
+frontend/build/android/
+frontend/build/ios/
+frontend/build/linux/
+frontend/build/macos/
+frontend/build/windows/
+# Keep frontend/build/web/ for deployment
 
 # IDE
 .vscode/
